--- a/compose.yaml
+++ b/compose.yaml
@@ -5,17 +5,25 @@ services:
     restart: unless-stopped
     ports:
       - "127.0.0.1:8000:8000"
+    logging:
+      driver: "local"
     env_file:
       - .env
     depends_on:
       - db
+
   db:
     container_name: db
     image: postgres:alpine
     restart: unless-stopped
+    logging:
+      driver: "local"
     env_file:
       - .env
     ports:
       - "5432"
     volumes:
-      - .db-data:/var/lib/postgresql/data/
+      - pgdata:/var/lib/postgresql/data/
+      
+volumes:
+  pgdata:
