Added login view
Login route now returns access token and refresh tokens properly

--- a/env.sample
+++ b/env.sample
@@ -1,1 +1,4 @@
 DB_URL=postgres://postgres:mysecretpassword@127.0.0.1:5432/postgres
+JWT_SECRET=mysecretkey
+JWT_REFRESH_SECRET=mysecretkey
+JWT_ALGORITHM=HS256
