Transfered Token expire values to env file

--- a/env.sample
+++ b/env.sample
@@ -2,3 +2,5 @@ DB_URL=postgres://postgres:mysecretpassword@127.0.0.1:5432/postgres
 JWT_SECRET=mysecretkey
 JWT_REFRESH_SECRET=mysecretkey
 JWT_ALGORITHM=HS256
+JWT_AT_EXPIRE_MINUTES=60
+JWT_RT_EXPIRE_MINUTES=10080
