--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,32 @@
 -i https://pypi.org/simple
+aiosqlite==0.17.0
 annotated-types==0.6.0
 anyio==3.7.1
+async-timeout==4.0.3
+asyncpg==0.29.0
+bcrypt==4.1.2
+cffi==1.16.0
 click==8.1.7
-fastapi==0.104.1
+cryptography==41.0.7
+ecdsa==0.18.0
+fastapi==0.105.0
 h11==0.14.0
-idna==3.4
+idna==3.6
+iso8601==1.1.0
+passlib[bcrypt]==1.7.4
+pyasn1==0.5.1
+pycparser==2.21
 pydantic==2.5.2
 pydantic-core==2.14.5
+pypika-tortoise==0.1.6
+python-dotenv==1.0.0
+python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
+pytz==2023.3.post1
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
-typing-extensions==4.8.0
+tortoise-orm[asyncpg]==0.20.0
+typing-extensions==4.9.0
 uvicorn==0.24.0.post1
