--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,8 @@ iso8601==1.1.0
 passlib[bcrypt]==1.7.4
 pyasn1==0.5.1
 pycparser==2.21
-pydantic==2.5.2
-pydantic-core==2.14.5
+pydantic==2.5.3
+pydantic-core==2.14.6
 pypika-tortoise==0.1.6
 python-dotenv==1.0.0
 python-jose[cryptography]==3.3.0
@@ -29,4 +29,4 @@ sniffio==1.3.0
 starlette==0.27.0
 tortoise-orm[asyncpg]==0.20.0
 typing-extensions==4.9.0
-uvicorn==0.24.0.post1
+uvicorn==0.25.0
