--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 -i https://pypi.org/simple
+aerich==0.7.2
 aiosqlite==0.17.0
 annotated-types==0.6.0
 anyio==3.7.1
@@ -8,6 +9,7 @@ bcrypt==4.1.2
 cffi==1.16.0
 click==8.1.7
 cryptography==41.0.7
+dictdiffer==0.9.0
 ecdsa==0.18.0
 fastapi==0.105.0
 h11==0.14.0
@@ -27,6 +29,7 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
+tomlkit==0.12.3
 tortoise-orm[asyncpg]==0.20.0
 typing-extensions==4.9.0
 uvicorn==0.25.0
