--- a/env.sample
+++ b/env.sample
@@ -1,6 +1,12 @@
+# postgres container(deployment only)needs POSTGRES_PASSWORD to be set
+POSTGRES_PASSWORD=mysecretpassword
+
+# Backend needs the following environment variables to be set
 DB_URL=postgres://postgres:mysecretpassword@127.0.0.1:5432/postgres
+
+# JWT stuff
 JWT_SECRET=mysecretkey
-JWT_REFRESH_SECRET=mysecretkey
+JWT_REFRESH_SECRET=mysecretrefreshkey
 JWT_ALGORITHM=HS256
 JWT_AT_EXPIRE_MINUTES=60
 JWT_RT_EXPIRE_MINUTES=10080
