Fixed sleep shell syntax CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
         cd /home/neighbourpro/neighbourpro-backend &&\
         docker compose down &&\
         git pull &&\
-        docker system prune --force &&\
+        docker system prune -a --force &&\
         docker compose up -d --build --force-recreate
