--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,13 @@ on:
 
 jobs:
 
-  Code-Update:
+  pull-and-run:
     runs-on: [self-hosted] 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Update server to latest commit
       run: | 
         cd /home/neighbourpro/neighbourpro-backend &&\
