App container now uses docker health check

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,8 @@ services:
     env_file:
       - .env
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   db:
     container_name: db
@@ -20,6 +21,11 @@ services:
       driver: "local"
     env_file:
       - .env
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
     ports:
       - "5432"
     volumes:
