--- a/compose.yaml
+++ b/compose.yaml
@@ -23,7 +23,7 @@ services:
       - .env
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
-      interval: 10s
+      interval: 24h
       timeout: 3s
       retries: 3
     ports:
