--- a/compose.yaml
+++ b/compose.yaml
@@ -22,8 +22,8 @@ services:
     env_file:
       - .env
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
-      interval: 24h
+      test: ["CMD-SHELL", "pg_isready", "-d", "${POSTGRES_DB}"]
+      interval: 10s
       timeout: 3s
       retries: 3
     ports:
