New model schemas

--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,4 @@
-# postgres container(deployment only)needs POSTGRES_PASSWORD to be set
+# postgres container(deployment only) needs POSTGRES_PASSWORD to be set as a seperate variable
 POSTGRES_PASSWORD=mysecretpassword
 
 # Backend needs the following environment variables to be set
