Fixed failed migrations due to missing pyproject

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,5 @@ jobs:
         docker compose down &&\
         git pull &&\
         docker system prune -a --force &&\
+        docker volume prune -a --force &&\
         docker compose up -d --build --force-recreate
