--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 tortoise-orm = {extras = ["asyncpg"], version = "^0.20.0"}
 python-dotenv = "^1.0.1"
 aerich = "^0.7.2"
+numpy = "^1.26.4"
 
 [build-system]
 requires = ["poetry-core"]
