--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.110.0"
+fastapi = "^0.110.1"
 python-multipart = "^0.0.9"
 uvicorn = "^0.29.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
@@ -17,6 +17,7 @@ tortoise-orm = {extras = ["asyncpg"], version = "^0.20.0"}
 python-dotenv = "^1.0.1"
 aerich = "^0.7.2"
 numpy = "^1.26.4"
+geopy = "^2.4.1"
 
 [build-system]
 requires = ["poetry-core"]
