--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,12 @@ cryptography==42.0.5 ; python_version >= "3.11" and python_version < "4.0"
 dictdiffer==0.9.0 ; python_version >= "3.11" and python_version < "4.0"
 ecdsa==0.18.0 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.110.1 ; python_version >= "3.11" and python_version < "4.0"
+geographiclib==2.0 ; python_version >= "3.11" and python_version < "4.0"
+geopy==2.4.1 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
 iso8601==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
+numpy==1.26.4 ; python_version >= "3.11" and python_version < "4.0"
 passlib[bcrypt]==1.7.4 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.11" and python_version < "4.0" and platform_python_implementation != "PyPy"
