Implemented recommendation system with colab filter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ python-dotenv = "^1.0.1"
 aerich = "^0.7.2"
 numpy = "^1.26.4"
 geopy = "^2.4.1"
+pandas = "^2.2.2"
+cython = "^3.0.10"
 
 [build-system]
 requires = ["poetry-core"]
