--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cffi==1.16.0 ; python_version >= "3.11" and python_version < "4.0" and platform_
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
 cryptography==42.0.5 ; python_version >= "3.11" and python_version < "4.0"
+cython==3.0.10 ; python_version >= "3.11" and python_version < "4.0"
 dictdiffer==0.9.0 ; python_version >= "3.11" and python_version < "4.0"
 ecdsa==0.18.0 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.110.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -18,12 +19,14 @@ h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
 iso8601==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.26.4 ; python_version >= "3.11" and python_version < "4.0"
+pandas==2.2.2 ; python_version >= "3.11" and python_version < "4.0"
 passlib[bcrypt]==1.7.4 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.11" and python_version < "4.0" and platform_python_implementation != "PyPy"
 pydantic-core==2.16.3 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.6.4 ; python_version >= "3.11" and python_version < "4.0"
 pypika-tortoise==0.1.6 ; python_version >= "3.11" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
 python-jose[cryptography]==3.3.0 ; python_version >= "3.11" and python_version < "4.0"
 python-multipart==0.0.9 ; python_version >= "3.11" and python_version < "4.0"
@@ -36,4 +39,5 @@ tomlkit==0.12.4 ; python_version >= "3.11" and python_version < "4.0"
 tortoise-orm==0.20.0 ; python_version >= "3.11" and python_version < "4.0"
 tortoise-orm[asyncpg]==0.20.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.11.0 ; python_version >= "3.11" and python_version < "4.0"
+tzdata==2024.1 ; python_version >= "3.11" and python_version < "4.0"
 uvicorn==0.29.0 ; python_version >= "3.11" and python_version < "4.0"
