updated sample env file

--- a/env.sample
+++ b/env.sample
@@ -10,3 +10,9 @@ JWT_REFRESH_SECRET=mysecretrefreshkey
 JWT_ALGORITHM=HS256
 JWT_AT_EXPIRE_MINUTES=60
 JWT_RT_EXPIRE_MINUTES=10080
+
+# Filtering algorithm weights
+DISTANCE_WEIGHT=0.4
+RATING_WEIGHT=0.3
+REVIEW_COUNT_WEIGHT=0.2
+COST_WEIGHT=0.1
