--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ python-jose[cryptography]==3.3.0 ; python_version >= "3.11" and python_version <
 python-multipart==0.0.9 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.11" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.11" and python_version < "4"
+setuptools==69.5.1 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.37.2 ; python_version >= "3.11" and python_version < "4.0"
